--- a/module_24/notebook_capstone_2.ipynb
+++ b/module_24/notebook_capstone_2.ipynb
@@ -8784,7 +8784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15586,6 +15586,7 @@
     "    plt.xlabel('Importance')\n",
     "    plt.ylabel('Feature', wrap=True,  ha='right')\n",
     "    plt.title('Feature importance')\n",
+    "    plt.savefig(\"images/FeatureImportance.png\")\n",
     "    plt.show()\n",
     "\n",
     "    # print the top features\n",
