--- a/module_24/notebook_capstone_2.ipynb
+++ b/module_24/notebook_capstone_2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Overview:** This project aims to identify and understand the various socio-economic and political factors influencing the Corruption Perceptions Index (CPI) at a country level. The exploration of these potential indicators might provide valuable insights into developing effective strategies to mitigate corruption and promote transparency and accountability in public sectors globally.\n",
     "\n",
-    "**Appaoach:** The project is following a CRISP-DM approach. split between this notebook and the README.md file. The README.md file contains the Business Understanding, and deployment. This notebook contains the data understanding, data preparation, and modeling phases.\n",
+    "**Approach:** The project is following a CRISP-DM approach. split between this notebook and the README.md file. The README.md file contains the Business Understanding, and deployment. This notebook contains the data understanding, data preparation, and modeling phases.\n",
     "\n"
    ]
   },
